@@ -1,3 +1,10 @@
+2021-06-08  Devin Rousso  <drousso@apple.com>
+
+        Unreviewed, followup to r278630
+
+        * Modules/applepay/ApplePaySession.h:
+        Remove mentions of file that doesn't exist anymore.
+
 2021-06-08  Michael Catanzaro  <mcatanzaro@gnome.org>
 
         Unreviewed, fix new -Wreturn-type warning
